bcgov_arches_common/media/css/project.css
@import url("./bc_index.css");
@import url("./map_legend_common.css");
@import url("../fontawesome/css/fontawesome.min.css");
@import url("../fontawesome/css/solid.min.css");

@font-face {
    font-family: BCSans;
    font-weight: 100 300;
    font-style: normal;
    src: url('../fonts/BCSans/BCSans-Light.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-Light.woff') format('woff'); /* Modern Browsers */
}

@font-face {
    font-family: BCSans;
    font-weight: 100 300;
    font-style: italic;
    src: url('../fonts/BCSans/BCSans-LightItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-LightItalic.woff') format('woff'); /* Modern Browsers */
}

@font-face {
    font-family: BCSans;
    font-weight: 400 599;
    font-style: normal;
    src: url('../fonts/BCSans/BCSans-Regular.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-Regular.woff') format('woff'); /* Modern Browsers */
}

@font-face {
    font-family: BCSans;
    font-weight: 400 599;
    font-style: italic;
    src: url('../fonts/BCSans/BCSans-Italic.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-Italic.woff') format('woff'); /* Modern Browsers */
}

@font-face {
    font-family: BCSans;
    font-weight: 600 900;
    font-style: normal;
    src: url('../fonts/BCSans/BCSans-Bold.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-Bold.woff') format('woff'); /* Modern Browsers */
}

@font-face {
    font-family: BCSans;
    font-weight: 600 900;
    font-style: italic;
    src: url('../fonts/BCSans/BCSans-BoldItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
    url('../fonts/BCSans/BCSans-BoldItalic.woff') format('woff'); /* Modern Browsers */
}

#main-content
{
    overflow: scroll;
}

body, h1, h2, h3, h4, h5
{
    font-family: BCSans, 'Open Sans', 'Noto Sans', Verdana, Arial, sans-serif !important;
}

/* Counteract nifty */
fieldset a {
    text-decoration: none;
    color: #337ab7;
    outline: 0;
}

fieldset a:hover,a:focus {
    text-decoration: none;
    color: #000099;
    outline: 0!important
}
/* End Counteract nifty */

.hover-feature-nav-right + .hover-feature-title {
    width: 100%;
}

.hover-feature-expand {
    text-align: right;
}

.workbench-card-sidepanel-body {
    height: 100%;
}

.search-listing-body {
    overflow-y: scroll;
    height: unset !important;
    min-height: 4.6em !important;
    max-height: 8em !important;
    -webkit-line-clamp: unset;
}

.bc-report-title {
    display: inline-block;
    vertical-align: top;
}

.ep-graph-title-icon {
    vertical-align: top;
}

.ep-graph-title {
    font-size: 1.4em;
}

.jstree-anchor {
    height: 100% !important;
}

/*********************************  */

/* Search and map popup cards     */

/*********************************  */
.search-listing-body > dt, .hover-feature > dt {
    padding-top: 5px;
}

/* Don't pad bottom of rich text fields in search card */
.search-listing-body > dd > p, .hover-feature > dd > p {
    margin-bottom: 0;
}

/*********************************  */

/* End Search and map popup cards */

/*********************************  */



/* Rules for BCRHP Details panel */
table.bc-summary-table td {
    vertical-align: top;
}

.bcrhp-grid-container, .bc-grid-container {
    display: grid;

    /* width: 75%; */
    grid-template-columns: 33% 33% 33%;
    vertical-align: top;
}

.bc-inline {
    display: inline-block;
}

.hide-section {
    display: none;
}

.grid-col-1 {
    grid-column-start: 1;
}

.grid-col-2 {
    grid-column-start: 2;
}

.grid-col-3 {
    grid-column-start: 3;
}

.grid-row-1 {
    grid-row-start: 1;
    grid-auto-rows: minmax(min-content, max-content);
}

.grid-row-2 {
    grid-row-start: 2;
    grid-auto-rows: minmax(min-content, max-content);
}

.grid-row-3 {
    grid-row-start: 3;
    grid-auto-rows: minmax(min-content, max-content);
}

.rp-image-grid-item
{
    max-width: unset;
}

.bcrhp-full-width-grid-item,
.bc-full-width-grid-item
{
    grid-column: 1 / span 3;
}

.bc-top-offset {
    padding-top: 25px;
}

.bc-details-images {
    float: right;
    margin-right: 25px;
    grid-column-start: 3;
    grid-row: 1 / span 8;
}

.bc-top-offset {
    padding-top: 50px;
}

.bc-details-images {
    float: right;
    margin-right: 25px;
}

.card-help-panel dl dt {
    float: left;
    margin-right: 5px;
}

.card-help-panel dl > dl {
    margin-left: 20px;
    margin-top: 20px;
}

.dl-horizontal {
    width: 100%;
}

.dl-horizontal dt, .dl-horizontal dd {
    vertical-align: top;
    display: inline-block;
    padding: 2px 5px 2px 20px;
    align-items: start;
    justify-content: left;
}

.details-icons {
    display: flex;
    gap: 12px;
    justify-content: right;
    padding: 14px 0;
}

.details-card-section .dl-horizontal dt {
    width: 200px;
    overflow: visible !important;
}

.details-card-section .dl-horizontal dd {
    width: calc(100% - 210px);
}

.rp-card-section .rp-report-tile .dl-horizontal dd {
    padding-top: 2px;
    padding-bottom: 2px;
}

hr {
    margin: 10px 0;
}

.rp-card-section {
    margin: 5px 20px;
}

.form-boolean-checkbox span {
    width: auto !important;
}

.bc-subsection-header {
    margin-top: 10px;
    text-decoration: underline;
}



@media (width >= 1366px)
{
    .dl-horizontal {
    }

    .bcrhp-full-width-grid-item dd,
    .bc-full-width-grid-item dd {
        width: 80%
    }

    div.bcrhp-grid-item .dl-horizontal dt,
    div.bc-grid-item .dl-horizontal dt {
        /* width: 170px !important; */
    }

    div.bcrhp-grid-item .dl-horizontal dd,
    div.bc-grid-item .dl-horizontal dd
    {
        width: 70%;
    }

    .bc-details-images {
        margin-right: 25px;
    }
}
/* ... */

